[gd_scene load_steps=18 format=3 uid="uid://dg5m8iyihbvmu"]

[ext_resource type="FontFile" uid="uid://b5bou0wtu243w" path="res://resources/Xolonium-Regular.ttf" id="1_183rx"]
[ext_resource type="Script" uid="uid://cw814y4o76ij7" path="res://properties/unit_properties.gd" id="1_cdtuf"]
[ext_resource type="PackedScene" uid="uid://d21eco4mp6ath" path="res://properties/unit_components/host_station/host_station_properties.tscn" id="2_ipxpa"]
[ext_resource type="PackedScene" uid="uid://wmfw6govhni3" path="res://properties/unit_components/squad/squad_properties.tscn" id="3_5a166"]
[ext_resource type="Script" uid="uid://05n30fa01ql1" path="res://properties/sector_properties.gd" id="3_gcote"]
[ext_resource type="PackedScene" uid="uid://3ccusunnblri" path="res://properties/sector_components/beam_gate/beam_gate_section.tscn" id="4_cct16"]
[ext_resource type="PackedScene" uid="uid://deva3qdr8h12x" path="res://properties/sector_components/stoudson_bomb/stoudson_bomb_section.tscn" id="5_1jnyc"]
[ext_resource type="PackedScene" uid="uid://bwoqr46387uyb" path="res://properties/sector_components/tech_upgrade/tech_upgrade_section.tscn" id="6_ar1xs"]
[ext_resource type="PackedScene" uid="uid://483vyvqaia2i" path="res://properties/sector_components/beam_gate_key_sector/beam_gate_key_sector_section.tscn" id="7_h4xm4"]
[ext_resource type="PackedScene" uid="uid://cxn42lptsqsdc" path="res://properties/sector_components/stoudson_bomb_key_sector/bomb_key_sector_section.tscn" id="8_n8f44"]
[ext_resource type="Script" uid="uid://d1u6n606ng01" path="res://properties/multi_sector_container.gd" id="9_yapal"]
[ext_resource type="Texture2D" uid="uid://v8g3mn0iikby" path="res://resources/img/ui_icons/close.png" id="11_yrk2l"]
[ext_resource type="Texture2D" uid="uid://dmhafem3n0yam" path="res://resources/img/ui_icons/close-hovered.png" id="12_hk2i5"]

[sub_resource type="GDScript" id="GDScript_hihdk"]
script/source = "extends TabContainer


func _ready() -> void:
	owner.visibility_changed.connect(func():
		if owner.visible:
			EditorState.mode = EditorState.States.Select
		)
	EventSystem.hoststation_added.connect(func(_owner_id, _vehicle_id): 
		owner.show()
		$Unit.show()
	)
	EventSystem.squad_added.connect(func(_owner_id, _vehicle_id): $Unit.show())
	EventSystem.item_added.connect(func():
		owner.show()
	)
	EventSystem.item_updated.connect(func(): 
		$Sector.show()
	)
	EventSystem.left_double_clicked.connect(func():
		if EditorState.selected_unit:
			$Unit.show()
			owner.show()
		else:
			$Sector.show()
			owner.show()
		)
	EventSystem.editor_mode_changed.connect(func(): 
		if EditorState.mode == EditorState.States.TypMapDesign:
			owner.hide()
		)
"

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0xn5w"]

[sub_resource type="LabelSettings" id="LabelSettings_e380m"]
font_color = Color(1, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_crt75"]
script/source = "extends TextureButton


func _ready() -> void:
	pressed.connect(func(): owner.hide())
"

[node name="PropertiesContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("1_183rx")
current_tab = 1
clip_tabs = false
script = SubResource("GDScript_hihdk")

[node name="Unit" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
tab_alignment = 1
script = ExtResource("1_cdtuf")
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Unit"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Unit/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="NoUnitLabel" type="Label" parent="TabContainer/Unit/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No unit selected"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostStationProperties" parent="TabContainer/Unit/ScrollContainer/MarginContainer" instance=ExtResource("2_ipxpa")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SquadProperties" parent="TabContainer/Unit/ScrollContainer/MarginContainer" instance=ExtResource("3_5a166")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Sector" type="TabBar" parent="TabContainer"]
layout_mode = 2
script = ExtResource("3_gcote")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Sector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sector/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="NoSectorLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No sector selected"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SectorPropertiesContainer" type="VBoxContainer" parent="TabContainer/Sector/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="SectorPositionLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Selected sector X: x Y: y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BorderInfoLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "This sector is a border"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="SectorOwnerTextLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Sector owner:"

[node name="SectorOwnerLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Faction"

[node name="SpecialBuildingTextLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Special building:"

[node name="SpecialBuildingLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Special Building Name"

[node name="InvalidBlgMapLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "This special building is invalid, which will cause the game to crash"
horizontal_alignment = 1
autowrap_mode = 3

[node name="WarningBlgMapLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.714734, 0.481875, 0, 1)
theme_override_font_sizes/font_size = 14
text = "This special building is not designed for the current level set"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
layout_mode = 2

[node name="BuildingTextLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Building N"
horizontal_alignment = 1

[node name="BuildingTexture" type="TextureRect" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_0xn5w")

[node name="InvalidTypMapLabel" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(220, 40)
layout_mode = 2
text = "This building index is not valid, which will cause the game to crash"
label_settings = SubResource("LabelSettings_e380m")
horizontal_alignment = 1
autowrap_mode = 3

[node name="BeamGateSection" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer" instance=ExtResource("4_cct16")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="StoudsonBombSection" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer" instance=ExtResource("5_1jnyc")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TechUpgradeSection" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer" instance=ExtResource("6_ar1xs")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BeamGateKeySectorSection" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer" instance=ExtResource("7_h4xm4")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BombKeySectorSection" parent="TabContainer/Sector/ScrollContainer/MarginContainer/SectorPropertiesContainer" instance=ExtResource("8_n8f44")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MultiSectorContainer" type="VBoxContainer" parent="TabContainer/Sector/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1
script = ExtResource("9_yapal")

[node name="Label" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/MultiSectorContainer"]
layout_mode = 2
text = "Selected sector X:N Y:M"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/MultiSectorContainer"]
layout_mode = 2
text = "Selected sector X:N Y:M"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/MultiSectorContainer"]
layout_mode = 2
text = "Selected sector X:N Y:M"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="TabContainer/Sector/ScrollContainer/MarginContainer/MultiSectorContainer"]
layout_mode = 2
text = "Selected sector X:N Y:M"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5

[node name="ClosePropertiesButton" type="TextureButton" parent="MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "Close properties"
texture_normal = ExtResource("11_yrk2l")
texture_hover = ExtResource("12_hk2i5")
ignore_texture_size = true
stretch_mode = 0
script = SubResource("GDScript_crt75")
